# yukihamada.jp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  m5_server.py  record-mv.mjs
.github/workflows/: claude.yml  deploy.yml
app/: Cargo.toml  build.rs
app/src/: lib.rs  wasm_utils.rs
app/src/components/: achievements.rs  blog_preview.rs  blog_search.rs  chat_widget.rs  footer.rs  hero.rs  konami.rs  layout.rs  mod.rs  mouse_trail.rs  nav.rs  particle_canvas.rs  project_modal.rs  projects.rs  scroll_observer.rs  shader_bg.rs  skill_tree.rs  stats.rs  terminal.rs  theme_toggle.rs  timeline.rs  typing_game.rs
app/src/data/: blog.rs  mod.rs  music.rs  projects.rs  timeline.rs
app/src/i18n/: en.json  es.json  fr.json  ja.json  ko.json  mod.rs  zh.json
app/src/pages/: blog.rs  home.rs  mod.rs  music.rs  not_found.rs
content/blog/: 2026-01-20-totonos-saas-cost-zero.md  2026-01-27-voice-first-billing-tech.md  2026-01-27-voice-first-billing.md  2026-02-05-multi-model-ai.md  2026-02-05-multi-model-race-tech.md  2026-02-09-elio-chat-release.md  2026-02-10-chatweb-explosion-tech.md  2026-02-10-chatweb-explosion.md  2026-02-13-jiu-jitsu-and-coding.md  2026-02-14-845-man-yen.md  2026-02-14-bjj-dojo-dx.md  2026-02-14-enablerdao-status-2026-02.md  2026-02-14-monthly-report-feb.md  2026-02-14-offline-ai-enterprise.md  2026-02-15-enablerdao-dao-future.md  2026-02-16-elio-chat-launch-stats.md  2026-02-18-misebanai-tech.md  2026-02-18-misebanai-zero-to-launch.md  2026-02-23-ai-driven-development.md  2026-02-23-prompt-driven-development.md  2026-02-23-sprint-cycle-9.md  2026-02-24-atp-supplement-guide.md  2026-02-24-blockplace-blockchain-photo.md  2026-02-24-chatweb-210users.md  2026-02-24-elio-rejection-marathon.md  2026-02-24-elio-rejection-tech.md  2026-02-24-elio-vs-banto.md  2026-02-24-jiuflow-zamna-hawaii.md  2026-02-24-stayflow-free-ai-pms.md  2026-03-01-stayflow-self-hosted-tech.md  2026-03-01-stayflow-stripe-live.md  2026-03-02-agents-running-wild.md  2026-03-02-why-wasm-rust-agents.md  2026-03-05-koe-device-festival.md  2026-03-05-koe-device-tech.md  2026-03-09-factlens-ai-factcheck.md  2026-03-10-koe-cross-platform-tech.md  2026-03-10-koe-cross-platform.md  2026-03-18-koe-sound-memory-local-first.md  2026-03-18-soluna-protocol-raw-udp-audio.md  (+26 more)
content/blog/en/: 2026-01-20-totonos-saas-cost-zero.md  2026-02-09-elio-chat-release.md  2026-02-13-jiu-jitsu-and-coding.md  2026-02-14-845-man-yen.md  2026-02-14-bjj-dojo-dx.md  2026-02-14-enablerdao-status-2026-02.md  2026-02-14-monthly-report-feb.md  2026-02-14-offline-ai-enterprise.md  2026-02-15-enablerdao-dao-future.md  2026-02-16-elio-chat-launch-stats.md  2026-02-23-ai-driven-development.md  2026-02-23-prompt-driven-development.md  2026-02-23-sprint-cycle-9.md  2026-02-24-atp-supplement-guide.md  2026-02-24-blockplace-blockchain-photo.md  2026-02-24-chatweb-210users.md  2026-02-24-elio-vs-banto.md  2026-02-24-jiuflow-zamna-hawaii.md  2026-02-24-stayflow-free-ai-pms.md  2026-03-02-agents-running-wild.md  2026-03-02-why-wasm-rust-agents.md  2026-03-18-koe-sound-memory-local-first.md  2026-03-18-soluna-protocol-raw-udp-audio.md
frontend/: Cargo.toml
frontend/src/: lib.rs
public/: sw.js
public/anime/: behind.html  concept.html  ep1-en.html  ep1.html  ep2-en.html  ep2.html  ep3-en.html  ep3.html  index.html
public/assets/: chat-widget.js  style.css
public/audio/blog/: 2026-05-01-bjj-best-sport-science.txt
public/blog/soluna/: blog-1.html  blog-2.html  blog-3.html  blog-4.html  blog-5.html  blog-6.html  blog-7.html  blog-8.html  blog-9.html
public/mv/: anime-ep1.html  apps.html  attention.html  claude-code-lyrics.md  claude-code.html  flow-state.html  generate_soluna_images.py  generate_triangle_anime.py  generate_triangle_images.py  hack.html  index.html  jiujitsu.html  kagi.html  koe.html  local-ai-ja.html  local-ai.html  make_youtube.py  musubinaosu.html  record_all.py  record_html.py  scene-editor.html  soluna-lyrics.md  soluna.html  style-compare.html  tap-select.html  tap.html  timeline.html  triangle.html  update_youtube.py  upload_youtube.py  video-frames.html  voice-select.html  voice-test.html
public/mv/assets/homescreen/: enabler_apps.mobileconfig
scripts/: gen_podcast.py  generate_ogp.py
server/: Cargo.toml
server/src/: main.rs
src/: blog.rs  main.rs
src/handlers/: mod.rs  pages.rs  seo.rs
style/: main.css
templates/: 404.html  about.html  blog_list.html  blog_post.html  home.html  mcp.html
