[workspace]
resolver = "2"
members = ["app", "frontend", "server"]

[workspace.dependencies]
leptos = { version = "0.7" }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
serde = { version = "1", features = ["derive"] }

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Leptos settings
[[workspace.metadata.leptos]]
name = "yukihamada-jp"
output-name = "yukihamada-jp"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "public"
site-addr = "0.0.0.0:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-package = "yukihamada-server"
lib-package = "yukihamada-frontend"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
