[package]
name = "yukihamada-jp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
portable-pty = "0.8"
tokio-stream = "0.1"
async-stream = "0.3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "set-header"] }
askama = "0.13"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
tower = { version = "0.5", features = ["util"] }
chrono = "0.4"
sha2 = "0.10"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
rand = "0.8"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
