[package]
name = "yukihamada-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { workspace = true }
yukihamada-app = { path = "../app" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[features]
default = []
hydrate = ["leptos/hydrate", "yukihamada-app/hydrate"]
